--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -16,6 +16,7 @@ body {
 
 h1 {
     padding: 10px 10px 0px 10px;
+    height: 1.5em;
     font-size: 90%;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
@@ -27,7 +28,8 @@ h1 {
     color: #666666;
     float: right;
     font-size: 110%;
-    padding-right: 0.5em
+    padding-right: 0.5em;
+    margin-bottom: 5px
 }
 
 .content-title {
