fixed style sheets.

--- a/src/css/multilookup.css
+++ b/src/css/multilookup.css
@@ -337,7 +337,7 @@
 
 #MultiLookup .MLu_group .MLu_result .MLu_result_article h3 {
     margin: 0.25em 0 1px 0;
-    font-wiehgt: bold;
+    font-weight: bold;
     position: relative;
     left: -1.5em
 }
