--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -16,32 +16,30 @@ body {
 }
 
 header {
-    padding: 0.5em 0.5em 0 0.5em;
+    padding: 0.5em 0.5em 0 0;
     height: 2em;
     font-weight: bold;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
     color: #333;
-    background: -webkit-gradient(linear, left top, left bottom, from(#eee), to(#ccc))
+    border-bottom: 1px solid #666;
 }
 
 #extension-title {
     color: #666666;
     float: right;
-    font-size: 110%;
+    font-size: 100%;
     padding-right: 0.5em;
     margin-bottom: 5px
 }
 
 .content-title {
     cursor: pointer;
-    padding: 5px 10px;
+    padding: 2px 10px;
+    border-bottom: 3px solid #fff
 }
 
 .content-title-active {
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-    background: white
+    background: white;
+    border-bottom: 3px solid #f66
 }
 
 #lookup-options {
@@ -107,18 +105,18 @@ input[type='submit'], input[type='reset'] {
     padding: 3px 0 3px 5px;
     font-size: 110%;
     color: #FFF;
-    background-color: #999
+    background-color: #666
 }
 
 #history-list {
-    max-height: 400px;
+    max-height: 380px;
     overflow-y: auto;
 }
 
 .history-item {
     font-size: 95%;
     cursor: pointer;
-    padding: 3px 0 3px 5px;
+    padding: .2em .5em;
     border-top: 1px solid #999;
     border-right: 1px solid #999;
     border-left: 1px solid #999;
